--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -17,23 +17,6 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/fullName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/transparent"
-        android:drawableLeft="@drawable/user"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/fullName"
-        android:inputType="textCapWords"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="16sp" />
-
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
@@ -60,23 +43,6 @@
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="@color/white_greyish" />
-
-    <EditText
-        android:id="@+id/mobileNumber"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/transparent"
-        android:drawableLeft="@drawable/phone"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/mobileNumber"
-        android:inputType="phone"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="16sp" />
 
     <View
         android:layout_width="fill_parent"
@@ -125,24 +91,35 @@
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="@color/white_greyish" />
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/isHomeMaker"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
-            android:padding="10dp"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:drawableLeft="@drawable/confirm_password"
-            android:drawablePadding="8dp"
-            />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ToggleButton
+            android:id="@+id/toggleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:text="ToggleButton" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            android:text="Are you Homemaker"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
+            android:padding="10dp"/>
+    </RelativeLayout>
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="@color/white_greyish" />
+
 
 
 
